V.1.0.16 Fixed some layout issues on mobile

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -23,6 +23,10 @@
         top: 0;
         right: 0;
         color: var(--accent-color);
+
+        @include media-small {
+            max-width: 150px;
+        }
     }
 
     .logo {
